--- a/style.css
+++ b/style.css
@@ -16,71 +16,44 @@ main{
     height: 100%;
     width: 100%;
     background-color: black;
-    
 }
 
 #card{
-    height: 200px;
-    width: 400px;
+    height: 330px;
+    width: 250px;
     background-color: white;
     border-radius: 10px;
+    padding: 20px;
+    position: relative;
 }
 
-#card p{
-    text-align: center;
-    padding: 10px 0;
-    font-size: 20px;
-    font-weight: 800;
-}
-#h1,#button{
-    color: black;
-}
-
-.progress{
-    padding: 20px 20px;
-}
-
-#outer{
-    height: 20px;
+#card img{
+    height: 250px;
     width: 100%;
-    background-color: rgb(176, 176, 171);
+    object-fit: cover;
     border-radius: 7px;
 }
 
-#inner{
-    height: 20px;
-    width: 0%;
-    background-color:green;
-    border-radius: 7px;
+#card h2{
+    text-align: center;
+    padding: 10px;
 }
 
-.container{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 20px 10px;
-    
+#card i{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    pointer-events: none;   
+    font-size: 40px;
+    background: linear-gradient(45deg, #feda75, #fa7e1e, #d62976, #962fbf, #4f5bd5);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-size: 50px;
+    transform: translate(-50%,-50%) scale(0) rotate(0deg);
+    opacity: 0;
+    transition: all 0.4s ease;
 }
+ 
 
-.container h1{
-    font-weight: 900;
-    display: inline;
-}
-
-.container button{
-    padding: 10px 10px;
-    border-radius: 5px;
-    cursor: pointer;
-    background-color: rgb(15, 131, 15);
-    color: white;
-    font-size: 400;
-    font-weight: 700;
-    border: none;
-    display: inline;
-}
-
-#button :active{
-    scale: 0.9;
-}
 
 
